--- a/style.css
+++ b/style.css
@@ -114,7 +114,7 @@ h5 {
     text-align: right;
     line-height: 2;
     padding: 0px 20px;
-    box-shadow: 0px 5px 6px -4px black;
+    box-shadow: 0px 6px 1px -5px #464646;
 }
 
 .info > span {
@@ -238,4 +238,70 @@ h5 {
 
 .col_green {
     background-color: #448B00;
+}
+
+/*      Last Block List             */
+
+.blocks_list_workers {
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    padding-left: 265px;
+    padding-right: 15px;
+    margin-top: 100px;
+}
+
+
+.blocks_list_workers > div {
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+    width: calc(50% - 20px);
+    background-color: #fff;
+    
+}
+
+.wraper_menu_icon {
+    display: flex;
+    justify-content: space-around;
+    width: 80%;
+    background-color: #D89E24;
+    color: #fff;
+    transform: translate(0px, -20px);
+    /* overflow: hidden;
+    text-overflow:ellipsis; 
+    white-space:nowrap;  */
+    padding: 20px;
+}
+
+.block_navigation > div {
+    padding: 15px;
+    width: 20%;
+    display: flex;
+    justify-content: space-evenly;
+}
+
+.block_navigation {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    width: 100%;
+}
+
+.content {
+    width: 80%;
+    display: flex;
+    justify-content: space-around;
+}
+
+.content > img {
+    object-fit: contain;
+    width: 15px;
+    margin: 0px 5px;
+}
+
+
+.content > p {
+   font-size: 12px;
+   margin: 0px 0px 0px 12px;
 }
