--- a/media.css
+++ b/media.css
@@ -48,7 +48,12 @@
 
 /* ----------------------------------*/
 
+@media (max-width:768px){
+    .container_menu {
+        display: none;
+    }
 
+}
 
 
 
