--- a/media.css
+++ b/media.css
@@ -33,7 +33,7 @@
     }
 
     .blocks_list_workers {
-        gap: 50px;
+        gap: 70px;
     }
 
     .wrap_all_container {
@@ -63,8 +63,6 @@
         font-size: 12px;
     }
 
-    
-
     .container_menu {
         display: none;
     }
@@ -73,10 +71,35 @@
         flex-direction: column;
      }
  
-     .block_icon_centre {
+    .block_icon_centre {
          width: 100% !important;
          margin-bottom: 60px;
      }
+
+    .wraper_img {
+        padding: 0px 20px 0px 20px;
+        transform: translate(0px, -30px);
+    }
+
+    .blocks_list_workers {
+        margin-top: 50px;
+    }
+
+    .wraper_menu_icon {
+        font-size: 18px;
+    }
+
+    tr > td > img {
+        width: 15px;
+    }
+
+    tr > td > p {
+        font-size: 14px;
+    }
+
+    tr > td > input {
+        width: 15px;
+    }
 }
 
 @media screen and (max-width: 1100px) {
@@ -106,6 +129,7 @@
     .block_navigation > div {
         width: inherit;
     }
+
 }
 
 @media screen and (max-width: 1400px){
