--- a/V1/css/media.css
+++ b/V1/css/media.css
@@ -16,7 +16,7 @@
         font-size: 12px;
     }
 
-    .wrap_icon_menu > img {
+    .title_content > img {
         display: inline;
         width: 30px;
         height: 25px;
@@ -35,7 +35,7 @@
         gap: 70px;
     }
 
-    .wrap_all_container {
+    .content {
         display: flex;
         flex-direction: column;
         justify-content: center;
@@ -164,6 +164,13 @@
 }
 
 @media screen and (max-width: 800px){
+
+    .title_content {
+        display: flex;
+        margin-left: 20px;
+        margin-top: 20px;
+        padding: 0;
+    }
     .container_user {
         padding-left: 15px;
         padding-right: 15px;
@@ -196,12 +203,6 @@
     }
 }
 
-@media screen and (max-width: 900px){
-   /* .footer_left_content {
-        padding: 20px 0px 0px 0px;
-        font-size: 12px;
-   } */
-}
 
 
 
